<resources>
    <string name="translation">english (default)</string>

    <string name="app_name">Note Now</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="common_ok">OK</string>
    <string name="common_save">Save</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_close">Close</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>

    <string name="no_notes_yet">You have no notes yet.\nCreate new one?</string>
    <string name="no_notes_for_label">No notes with this label</string>
    <string name="no_notes_for_search">Oops! No notes found</string>

    <string name="action_bar_add">New note</string>
    <string name="action_bar_speak">Voice input</string>
    <string name="action_bar_speak_prompt">Speak now</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_share_title">Share note</string>
    <string name="action_bar_label_selected">Label: %s</string>
    <string name="action_bar_search_results">Search: %s</string>
    <string name="action_dropbox_refresh">Refresh</string>
    <string name="action_dropbox_refresh_toast">Sync has been started…</string>
    <string name="action_dropbox_link_succeded_toast">Dropbox account has been linked</string>
    <string name="action_dropbox_link_failed_toast">Dropbox account link failed!</string>
    <string name="action_dropbox_already_linked_toast">Dropbox account linked</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="action_sort">Sort</string>
    <string name="action_sort_by_title">By title</string>
    <string name="action_sort_by_create_asc">By creation (oldest first)</string>
    <string name="action_sort_by_create_desc">By creation (newest first)</string>
    <string name="action_sort_by_change">By last changing</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search note</string>

    <string name="empty_note_placeholder">empty note</string>
    <string name="empty_note_not_saved">Empty note not saved</string>
    <string name="empty_note_not_shared">This note is empty</string>

    <string name="note_action_labels">Labels</string>
    <string name="note_action_info">Info</string>
    <string name="note_info_created">Created: %s</string>
    <string name="note_info_modified">Modified: %s</string>
    <string name="note_action_delete">Delete</string>
    <string name="note_action_delete_confirm_dialog_text">Delete this note?</string>
    <string name="note_action_no_labels_dialog_text">You have no labels.\nCreate new one for this note?</string>
    <string name="note_action_save_changes">Done</string>
    <string name="note_action_discard_changes">Discard changes</string>

    <string name="note_details_title_hint">Title</string>
    <string name="note_details_body_hint">Text</string>

    <string name="labels_drawer_all_notes">All notes</string>
    <string name="labels_drawer_add_label">New label</string>

    <string name="label_action_edit">Edit</string>
    <string name="label_action_delete">Delete</string>
    <string name="label_action_delete_confirm_dialog_text">Delete this label?</string>

    <string name="label_title_hint">Label name</string>
    <string name="label_edit_color_select">Select color</string>

    <string name="color_default">white</string>
    <string name="color_red">red</string>
    <string name="color_orange">orange</string>
    <string name="color_yellow">yellow</string>
    <string name="color_green">green</string>
    <string name="color_blue">blue</string>
    <string name="color_purple">purple</string>
    <string name="color_grey">grey</string>

    <string name="more_labels">…</string>

    <string name="settings_linkify_title">Links in note</string>
    <string name="settings_linkify_subtitle">Make clickable links and phone numbers in note\'s text</string>

    <string name="no_connection_toast">No network connection!</string>

    <string name="no_voice_search_dialog_text">No voice recognition app found on your device. Would you like to install it from Google Play?</string>
    <string name="no_voice_search_dialog_install">Install</string>

    <string name="about_version">Version: %s</string>
    <string name="about_author">Created by Ilya Kopylov</string>
    <string name="about_google_play">Rate in Google Play</string>
    <string name="about_contact">Contact author</string>
    <string name="about_contact_do_not_remove">\n\n--------------------\nPlease, do not remove following technical information!\n--------------------\n</string>
    <string name="about_sources">Source code can be found on\nhttps://github.com/iliakplv/notes</string>

    <string name="db_announcement">Announcement!</string>
    <string name="db_announcement_text">Unfortunately in April 2016 Dropbox closing third party apps data storage used in Note Now (Datastore API).\n\nLinking your Dropbox account to the app is no longer available. If you were not using this feature those changes will not affect you. Your existing notes will be kept on your device.\n\nIf you had linked your Dropbox account your data will be kept as well. Only the synchronization will be turned off.\n\nThank you for using Note Now!</string>

</resources>
