<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="14dp"
		android:orientation="vertical">

		<TextView
			style="@style/AboutText"
			android:id="@+id/version"
			android:text="@string/about_version"/>

		<TextView
			style="@style/AboutText"
			android:id="@+id/author"
			android:text="@string/about_author"/>

		<Button
			style="@style/AboutText"
			android:id="@+id/contact"
			android:text="@string/about_contact"/>

		<TextView
			style="@style/AboutText"
			android:id="@+id/sources"
			android:text="@string/about_sources"/>

		</LinearLayout>

</ScrollView>